# cisco-alerting-engine

./: .env.example  .gitignore  README.md  net_alerting_engine.py  pyproject.toml  requirements.txt
cisco_alerting/: cli.py  monitor.py  notifier.py
tests/: test_monitor.py
